<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="fragment"
    app:constraint_referenced_tags="fragment"
    tools:context=".ProgressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0CBF71"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:paddingStart="20dp"
                android:text="@string/progreso"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:paddingHorizontal="20dp"
                android:text="@string/progressNumber"
                android:textColor="#5E35B1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:max="5"
                android:progress="1"
                android:progressBackgroundTint="#5E35B1"
                android:progressTint="#5E35B1"
                android:scaleX="1"
                android:soundEffectsEnabled="true" />

            <TextView
                android:id="@+id/textViewPreguntas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:paddingHorizontal="20dp"
                android:text="@string/Totalquestions"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/puntuacion_pregunta"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPuntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/puntuacionNum"
                android:textColor="#5E35B1"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>