<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#047F49"
    tools:context=".PreguntaCuatroActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.rsoftware.practica6.ProgressFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_progress" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="415dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:srcCompat="@drawable/question"
        android:importantForAccessibility="no" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#BF000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="203dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pregunta4"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="100dp"
                android:minHeight="200dp"
                android:textAlignment="center"
                app:singleLine="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTrello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:fontFamily="@font/aldrich"
                    android:minWidth="75dp"
                    android:tag="@string/trello"
                    android:text="@string/trello"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:chipStrokeColor="#00A3FA"
                    app:chipStrokeWidth="2dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/icons8_slack" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTeams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:fontFamily="@font/aldrich"
                    android:minWidth="75dp"
                    android:tag="@string/teams"
                    android:text="@string/teams"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:chipStrokeColor="#43A047"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCorrecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:fontFamily="@font/aldrich"
                    android:minWidth="75dp"
                    android:tag="@string/slack"
                    android:text="@string/slack"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:chipStrokeColor="#D81B60"
                    app:chipStrokeWidth="2dp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"

                    android:visibility="invisible"
                    app:srcCompat="@drawable/icons8_slack" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAdobe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:checkable="true"
                    android:fontFamily="@font/aldrich"

                    android:minWidth="75dp"
                    android:tag="@string/adobe"
                    android:text="@string/adobe"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:chipStrokeColor="#FDD835"
                    app:chipStrokeWidth="2dp" />
            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:fontFamily="@font/aldrich"
            android:onClick="btnAtras"
            android:text="@string/atras"
            android:textColor="#546E7A"
            android:textSize="24sp"
            app:cornerRadius="20dp" />

        <View
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/aldrich"
            android:onClick="btnNext"
            android:text="@string/siguiente"
            android:textColor="#000000"
            android:textSize="24sp"
            app:cornerRadius="20dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>